# ShadowJar

./: .gitignore  Cargo.toml  README.md  config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  lint.yml  release.yml  rust-ci.yml  test.yml
src/: api.rs  build.rs  config.rs  db.rs  lib.rs  main.rs
tests/: api_tests.rs  db_tests.rs
