[package]
name = "ShadowJar"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = "0.4.39"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
