[package]
name = "shadow_jar"
version = "0.1.0"
edition = "2021"
default-run = "shadow_jar"

[[bin]]
name = "shadow_jar"
path = "src/main.rs"

[[bin]]
name = "db_init"
path = "src/bin/db_init.rs"

[dependencies]
axum = "0.8.1"
chrono = "0.4.39"
dunce = "1.0.5"
regex = "1.11.1"
config = "0.15.8"
once_cell = "1.20.3"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
